// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a subscript text to match snapshot 1`] = `
<div
  className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none"
  fontStyle="normal"
  role="text"
>
  H
  <div
    className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none dy-inline"
    fontStyle="normal"
    role="text"
  >
    <sub
      className="fse-75 lht-0 pn-relative bm--0p25em"
    >
      2
    </sub>
  </div>
  O
</div>
`;

exports[`should render a superscript text to match snapshot 1`] = `
<div
  className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none"
  fontStyle="normal"
  role="text"
>
  H
  <div
    className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none dy-inline"
    fontStyle="normal"
    role="text"
  >
    <sup
      className="fse-75 lht-0 pn-relative tp--0p5em"
    >
      2
    </sup>
  </div>
  O
</div>
`;

exports[`should render one truncated text line to match snapshot 1`] = `
<div
  className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-underline"
  fontStyle="normal"
  role="text"
>
  <span
    className="ow-hidden"
  >
    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
  </span>
</div>
`;

exports[`text to match snapshot 1`] = `
<div
  className="fse-36px lht-40px fwt-700 lsg--0p02em tdn-line-through cr- mbm-24px tn-color-0p15s-ease"
  fontStyle="normal"
  role="text"
>
  Some text here
</div>
`;
